# substrate-node-boilerplate

./: Dockerfile  README.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: mod.rs
